Allow specifying the default font family through PlatformSupport